Some code suggestions from IDEA and test of commit from inside IDEA.